// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/LogLink links to datasets 1`] = `
<Link
  to="/datasets/someid"
>
  somedataset
</Link>
`;

exports[`admin/LogLink links to jobs 1`] = `
<Link
  to="/datasets/someid/versions/anotherid"
>
  somedataset
   
  <br />
   
  someapp
  :
  1
</Link>
`;

exports[`admin/LogLink renders successfully 1`] = `<span />`;
